# G-test_app

./: Aleem-Resume-2025_Qcom.docx  Google Mock (GMock).pptx  w4-linux-sample.tar
gmock_turtle_example/: CMakeLists.txt
gmock_turtle_example/include/: painter.h  turtle.h
gmock_turtle_example/src/: painter.cpp
gmock_turtle_example/tests/: CMakeLists.txt  mock_turtle.h  painter_test.cpp
gpio_test/: CMakeLists.txt  prj.conf  qemu_x86.overlay
gpio_test/src/: gpio_test_utils.c  gpio_test_utils.h  main.c
gpio_test/tests/: test_gpio.c
gpio_test_v1/: CMakeLists.txt  env.sh  generate_coverage-v1.sh  generate_coverage.sh  prj.conf
gpio_test_v1/src/: gpio_test_utils.c  gpio_test_utils.h  test_gpio.c
gtest_wsl2/: CMakeLists.txt  device_controller.cpp  hardware_interface.h  mock_hardware.h  test_device_controller.cpp
i2c_simulator/: CMakeLists.txt
i2c_simulator/include/: I2CInterface.h
i2c_simulator/src/: CMakeLists.txt  I2CDevice.cpp
i2c_simulator/test/: CMakeLists.txt  I2CDeviceTest.cpp  MockI2C.h
w4-linux-sample/: BUCK  hello.c  hello.c--
w4-linux-sample/utils/: utils.c  utils.h
